                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-11-2005 added: option in my programs settings to en/disable Kai (disabled by default).
 - 05-11-2005 changed: allmusic.com album lookups now use both album and artist and rank the results
 - 05-11-2005 fixed: the cover image is updated when refreshing album information
 - 05-11-2005 changed: some startup logging cleanup.
 - 05-11-2005 changed: show average bitrate for vbr mp3 again.
 - 05-11-2005 changed: removed mymusictop100 keymappings from keymap.xml (window doesn't exist anymore, functionality was moved to libraryview a while back)
 - 04-11-2005 fixed: myfiles, certain .sids, .nsfs and .oggs weren't deleteable/copyable.
 - 04-11-2005 fixed: mymusic, when you changed sort method, cursor placement changed to wrong file, thx to Jmarshall for fix
 - 03-11-2005 added: added: dvdplayer, 24 bits lpcm decoding
 - 02-11-2005 changed: utf8 name conversion in song metadata during last.fm streaming
 - 02-11-2005 changed: faster start of last.fm streams
 - 02-11-2005 fixed: last.fm, code indenting
 - 02-11-2005 added: last.fm, user's recently listened tracks, sortable by date
 - 02-11-2005 fixed: last.fm, utf8 names are converted so that accented letters are properly displayed
 - 02-11-2005 fixed: last.fm, lists with decimals (ratings...) were not properly sorted (sort by size)
 - 02-11-2005 fixed: last.fm, clears directory cache when returning to root to allow multiple searches
 - 01-11-2005 fixed: xlink kai settings were hidden.
 - 01-11-2005 fixed: applied sf patch #1283584 to fix some python control issues, (Thnx to hempster)